[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/music/sture at it again jingle.ogg" type="AudioStream" id=1]
[ext_resource path="res://Assets/sounds/warp.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/sounds/death.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scripts/TileMap.gd" type="Script" id=6]
[ext_resource path="res://Assets/terrain_pixel_tilemap.tres" type="TileSet" id=11]

[node name="TileMap" type="TileMap"]
position = Vector2( 324.245, 147.406 )
tile_set = ExtResource( 11 )
cell_size = Vector2( 32, 32 )
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( 0, 0, 131072, 1, 0, 131073, 2, 0, 131073, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 131073, 8, 0, 131073, 9, 0, 131073, 10, 0, 131074, 65536, 0, 196608, 65537, 0, 196609, 65538, 0, 196609, 65539, 0, 196609, 65540, 0, 196609, 65541, 0, 196609, 65542, 0, 196609, 65543, 0, 196609, 65544, 0, 196609, 65545, 0, 196609, 65546, 0, 196610, 131072, 0, 196608, 131073, 0, 196609, 131074, 0, 196609, 131075, 0, 196609, 131076, 0, 196609, 131077, 0, 196609, 131078, 0, 196609, 131079, 0, 196609, 131080, 0, 196609, 131081, 0, 196609, 131082, 0, 196610, 196608, 0, 196608, 196609, 0, 196609, 196610, 0, 196609, 196611, 0, 196609, 196612, 0, 196609, 196613, 0, 196609, 196614, 0, 196609, 196615, 0, 196609, 196616, 0, 196609, 196617, 0, 196609, 196618, 0, 196610, 262144, 0, 196608, 262145, 0, 196609, 262146, 0, 196609, 262147, 0, 196609, 262148, 0, 196609, 262149, 0, 196609, 262150, 0, 196609, 262151, 0, 196609, 262152, 0, 196609, 262153, 0, 196609, 262154, 0, 196610, 327680, 0, 196608, 327681, 0, 196609, 327682, 0, 196609, 327683, 0, 196609, 327684, 0, 196609, 327685, 0, 196609, 327686, 0, 196609, 327687, 0, 196609, 327688, 0, 196609, 327689, 0, 196609, 327690, 0, 196610, 393216, 0, 196608, 393217, 0, 196609, 393218, 0, 196609, 393219, 0, 196609, 393220, 0, 196609, 393221, 0, 196609, 393222, 0, 196609, 393223, 0, 196609, 393224, 0, 196609, 393225, 0, 196609, 393226, 0, 196610, 458752, 0, 196608, 458753, 0, 196609, 458754, 0, 196609, 458755, 0, 196609, 458756, 0, 196609, 458757, 0, 196609, 458758, 0, 196609, 458759, 0, 196609, 458760, 0, 196609, 458761, 0, 196609, 458762, 0, 196610, 524288, 0, 196608, 524289, 0, 196609, 524290, 0, 196609, 524291, 0, 196609, 524292, 0, 196609, 524293, 0, 196609, 524294, 0, 196609, 524295, 0, 196609, 524296, 0, 196609, 524297, 0, 196609, 524298, 0, 196610, 589824, 0, 262144, 589825, 0, 262145, 589826, 0, 262145, 589827, 0, 262145, 589828, 0, 262145, 589829, 0, 262145, 589830, 0, 262145, 589831, 0, 262145, 589832, 0, 262145, 589833, 0, 262145, 589834, 0, 262146, 1114151, 0, 0 )
script = ExtResource( 6 )

[node name="GameStartJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 0.8
bus = "Music"

[node name="WarpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.467
bus = "Sound effects"

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound effects"
